--- a/online exam/css/styile.css
+++ b/online exam/css/styile.css
@@ -1,6 +1,31 @@
 body{
     margin: 0px;
 }
+a {
+    text-decoration: none ;
+ }
+ .row{
+     margin-right: 0px !important;
+ }
+a:hover
+ {
+   color:white;
+   text-decoration:none;
+   cursor:pointer;
+  }
+.bg-transparent{
+    
+    background-color: #2D70B6 !important;
+}
+.nab-button{
+    
+    display: none;
+}
+header button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
 p{
     font-size: 20px;
 }
@@ -8,22 +33,53 @@ p{
 .cw{
     color: white;
 }
-.display-4{
+.text-larg{
     color: yellow;
-    padding: 0px;
+    margin: 0px;
     
 }
 .btn-width{
     width: 100%;
-    height: 50px;;
+    height: 40px;
+    padding: 15px;
+    margin-top: 20px
 }
+
+.img-profile{
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 40px;
+}
+.img-profile img{
+   width: 100%;
+}
+/* ---------------------- Login page code --------------*/
+.login-box{
+    max-width: 400px;
+    height: 270px;
+    box-shadow: 0px 0px 10px 0px rgb(15, 15, 15,0.4);
+    margin: auto;
+    background-color: rgb(241, 241, 241);
+    border-radius: 10px;
+}
+.box-header{
+    height: 40px;
+    background-color: rgb(214, 214, 214);
+    padding: 5px 15px;
+    margin-bottom: 30px;
+    overflow: hidden;
+
+}
+
+/* ---------------------- Page block code --------------*/
 header{
     height: auto;
-    padding: 10px;
-    background-color: rgb(11, 78, 155);
+    padding: 5px;
+    background-color: #2D70B6;
 }
 .header-contant{
-    background-color: rgb(83, 83, 83);
+    background-color: #666666;
     padding: 10px;
     
 }
@@ -31,46 +87,9 @@ header{
     color: white;
     margin-bottom: 0px !important;
 }
-.img-profile{
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
-    border-radius: 50px;
-}
-.img-profile img{
-    width: 100%;
-}
 
-.login-box{
-    width: 400px;
-    height: 300px;
-    box-shadow: 0px 0px 10px 0px rgb(15, 15, 15,0.4);
-    margin: 20px;
-    margin-left: 30%;
-    border-radius: 10px;
-}
-.box-header{
-    width:400px;
-    height: 40px;
-    background-color: rgb(170, 170, 170);
-    padding: 5px 15px;
-    margin-bottom: 30px;
-    overflow: hidden;
-
-}
-footer{
-    height: 20px;
-    position: absolute;
-    bottom: 0px;
-    background-color: rgb(22, 59, 128);
-}
-/* ----------------------Instruction Page code --------------*/
-.instruction{
-    overflow: scroll;
-    height: 70vh;
-}
 .header-ins{
-    background-color: rgb(116, 158, 250);
+    background-color: #BCE8F5;
     padding:5px;
     
 }
@@ -80,25 +99,178 @@ footer{
     
 }
 .left-sidebar{
-    width: 70%;
+    width: 76%;
     float: left;
-    height: 90vh;
-    border-right: 1px solid rgb(150, 150, 150);
+    height: 80vh;
+   display: block;
+
 }
 .right-sidebar{
-    height: 90vh;
-    width: 30%;
-    background-color: rgb(236, 234, 234);
+    border-left: 1px solid rgb(46, 46, 46,0.5);
+    width: 24%;
     float: left;
-    padding: 20px;
+    padding: 0px 0px;
+    min-height: 87vh;
+    display: block;
 }
-.footer-inst{
-    width: 70%;
+   
+.user-profile{
+    border-bottom: 1px solid rgb(0, 0, 0,0.2);
+    height: 16vh;
+}
+footer{
+    padding: 1px;
+    height: 4vh;
     position: fixed;
-    bottom: 0px;
-    padding: 20px;
-    border-top: 1px solid rgb(78, 78, 78);
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    background-color: #617b8c;
 }
-.footer-inst p{
+/* ---------------------- Instruction block code --------------*/
+.instruction{
+    overflow: scroll;
+    height: 70vh;
+}
+
+/* ----------------------Close Page code --------------*/
+.box{
+    max-width: 600px;
+    height: 300px;
+    margin: auto;
+    padding: 20px;
+    text-align: center;
+    background-color: rgb(243, 243, 243);
+}
+.section{
+    width: 100%;
+}
+/* ----------------------Quiz Page code --------------*/
+.header2{
+    background-color: black;
+    height: 5vh;
+}
+.header2 p{
+    color: white;
     font-size: 14px;
+    padding: 0px;
+    margin: 0px;
+    
+}
+.question-header{
+    height: 10vh;
+}
+.paper-section{
+    display: flex;
+    width: 100%;
+    padding-left: 20px;
+    border-top:solid 1px rgb(148, 148, 148);
+    border-bottom:solid 1px rgb(148, 148, 148);
+}
+.pbutton{
+    width: auto;
+    padding: 5px 10px;
+    height: auto;
+    border-left: solid 1px rgb(148, 148, 148);
+    border-right: solid 1px rgb(148, 148, 148);
+    color: black;
+    background-color: rgb(255, 255, 255);
+}
+pbutton a{
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   
+}
+.pbutton:hover {
+    background-color: rgb(48, 48, 189);
+
+}
+.pbutton:hover a{
+    color: white;
+    text-decoration: none;
+}
+.question-body{
+    height: 58vh;
+    overflow-y: scroll;
+}
+.question-command {
+    height: 8vh;
+    background-color: white;
+    border-top: 1px solid rgb(189, 189, 189);
+    padding:2vh 10px;
+}
+.question-command p{
+    font-weight: 14px;
+}
+.question-overview{
+    width: 100%;
+    height: 28vh;
+    background-color: white;  
+
+}
+.question-omr{
+
+    width: 100%;
+    height: 30vh;
+    background-color: white;
+    border-bottom: 1px solid rgb(189, 189, 189);
+}
+.question-omr .btn{
+    width: 40px;
+    height: 40px;
+}
+.question-omr .btn:active{
+    border-radius:15px 15px 0px 0px;
+    background-color: brown;
+    color: white;
+}
+.overview-table td{
+    padding: 5px;
+    max-width: 150px;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .nab-button{
+        display: block;
+    }
+    .left-sidebar .btn{
+        padding: .25rem .5rem;
+        font-size: .875rem;
+        line-height: 1.5;
+        border-radius: .2rem;
+    }
+    .question-command{
+        position: fixed;
+        background-color: white;
+        bottom: 15px;
+        height: 60px;
+    }
+
+    footer{
+        display: none;
+    }
+  
+    .right-sidebar,.left-sidebar
+    {
+        width: 100%;
+    
+    }
+    .user-profile{
+        display: none;
+    }
+    .paper-section{
+        display: none;
+    }
+    .login-box{
+        margin-left: 5px;
+    }
+    .user{
+        display: none;
+    }
+    .cw{
+        font-size: 22px;
+    }
 }
